refactor: optimize imports, remove redundant variables and extract methods